[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/imgBorel/a.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/speaker.png" type="Texture" id=2]
[ext_resource path="res://page/help/interfaceDescriptionGesture.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=4]
[ext_resource path="res://assets/background.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/back.png" type="Texture" id=7]
[ext_resource path="res://assets/theme/backgroundPanel.tres" type="StyleBox" id=9]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBackGround" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.32549 )
anchor_left = 0.0810547
anchor_top = 0.128333
anchor_right = 0.921875
anchor_bottom = 0.931667
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Back" type="Button" parent="."]
anchor_left = 0.0151834
anchor_top = 0.0263522
anchor_right = 0.0981912
anchor_bottom = 0.168019
theme = ExtResource( 4 )
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Borel" type="TextureRect" parent="."]
anchor_left = 0.175576
anchor_top = 0.265351
anchor_right = 0.44706
anchor_bottom = 0.738684
rect_clip_content = true
theme = ExtResource( 4 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="ColorRect" parent="."]
anchor_left = 0.547235
anchor_top = 0.268158
anchor_right = 0.840204
anchor_bottom = 0.731491
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.180392, 0.211765, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = 204.0
margin_top = 36.0
margin_right = 204.0
margin_bottom = 36.0
autoplay = true
expand = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndBox" type="VBoxContainer" parent="."]
anchor_left = 0.195313
anchor_top = 0.765614
anchor_right = 0.804688
anchor_bottom = 0.912281
size_flags_vertical = 0
theme = ExtResource( 4 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sound" type="Label" parent="EndBox"]
visible = false
margin_top = 4.0
margin_right = 624.0
margin_bottom = 40.0
theme = ExtResource( 4 )
text = "[u]"
align = 1

[node name="Name" type="Label" parent="EndBox"]
margin_top = 24.0
margin_right = 624.0
margin_bottom = 60.0
theme = ExtResource( 4 )
text = "Uluberlu"
align = 1

[node name="Listen" type="TextureButton" parent="EndBox"]
margin_left = 312.0
margin_top = 64.0
margin_right = 312.0
margin_bottom = 64.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 4 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Title" type="Label" parent="."]
anchor_left = 0.182977
anchor_top = 0.022807
anchor_right = 0.792352
anchor_bottom = 0.082807
text = "VOYELLE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="gui_input" from="VideoPlayer" to="." method="_on_VideoPlayer_gui_input"]
[connection signal="pressed" from="EndBox/Listen" to="." method="_on_Speak_pressed"]
